--- a/GI-services/DisplayServer/DisplayServer/WebContent/css/app.css
+++ b/GI-services/DisplayServer/DisplayServer/WebContent/css/app.css
@@ -6591,3 +6591,20 @@ fieldset {
   display: flex; 
 }
 
+#inputmap {
+  width: 800px;
+
+}
+
+#additems
+{
+
+  color: #ffffff;
+  background-color: #ff4500;
+  border: 2px solid #ff4500;
+  transition: background-color 0.5s ease-in, border-color 0.5s ease-in;
+  font-weight: 600;
+  padding: 16px 46px;
+  border-radius: 6px;
+  margin-left: 100px;
+}
