--- a/GI-services/DisplayServer/DisplayServer/WebContent/css/app.css
+++ b/GI-services/DisplayServer/DisplayServer/WebContent/css/app.css
@@ -6604,7 +6604,35 @@ fieldset {
   border: 2px solid #ff4500;
   transition: background-color 0.5s ease-in, border-color 0.5s ease-in;
   font-weight: 600;
-  padding: 16px 46px;
+  /* padding: 16px 46px; */
   border-radius: 6px;
-  margin-left: 100px;
+  margin-left: 17px;
+  
+}
+
+#deleteitems
+{
+
+  color: #ffffff;
+  background-color: #ff4500;
+  border: 2px solid #ff4500;
+  transition: background-color 0.5s ease-in, border-color 0.5s ease-in;
+  font-weight: 600;
+  /* padding: 16px 46px; */
+  border-radius: 6px;
+  margin-left: 17px;
+  
+}
+#refreshitems
+{
+
+  color: #ffffff;
+  background-color: #ff4500;
+  border: 2px solid #ff4500;
+  transition: background-color 0.5s ease-in, border-color 0.5s ease-in;
+  font-weight: 600;
+  /* padding: 16px 46px; */
+  border-radius: 6px;
+  margin-left: 17px;
+  
 }
